fix sidebar spacing/ added header logos

--- a/styles.css
+++ b/styles.css
@@ -29,10 +29,14 @@ header {
   padding: 10px;
 }
 
+img {
+  margin-right: 1rem;
+}
+
 .right_top_header {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
   justify-self: end;
   width: 500px;
   margin-right: 100px;
@@ -61,9 +65,11 @@ header {
 
 .header_nav {
   display: flex;
+  color: black;
   width: 500px;
   justify-content: space-between;
   margin-right: 100px;
+  border: 5px solid purple;
 }
 
 .searchbar input {
@@ -77,36 +83,36 @@ header {
 .sidebar {
   grid-column: 1;
   grid-row: 1/5;
-  border: 1px solid black;
   background-color: #0284c7;
   color: white;
   list-style: none;
 
 
-
 }
 
-
-.img {
-  background-size: 50px 50px;
-}
 
 .sidebar_nav {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: repeat(12, 1fr);
-  border: 1px solid red;
+  grid-template-rows: repeat(8, 1fr);
   font-size: larger;
   gap: 20px;
 
-
 }
+
+li a img {
+  margin-right: 1rem;
+}
+
+h1 img {
+  margin-right: 1rem;
+}
+
 
 .sidebar_nav2 {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(6, 1fr);
-  border: 1px solid green;
   font-size: larger;
   gap: 20px;
 
